feat: getCategoriesByIds 추가 fix: 테스트 코드 ID 중복 방지를 위해 ID 변경